# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  general_logic.py
brain_games/games/: all_games.py  constants.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
